# robotik_projekt

./: .gitignore  .gitmodules  README.md  run_keyboard_handler_node_waymo.sh
cpp_pub/: CMakeLists.txt
cpp_pub/src/: publisher_member_function.cpp
py_sub/: package.xml
py_sub/py_sub/: subscriber_member_function.py
src/cpp_pub/: CMakeLists.txt  package.xml
src/following_obstacle/: package.xml  setup.cfg  setup.py
src/following_obstacle/following_obstacle/: laserscanner.py
src/line_follower/: package.xml  setup.py
src/line_follower/launch/: line_follower_launch.py
src/line_follower/line_follower/: line_follower.py  stop.py
src/line_follower/line_follower/launch/: line_follower_launch.py
src/line_follower_bo/: package.xml  setup.cfg  setup.py
src/line_follower_bo/launch/: line_follower_bo_launch.py
src/line_follower_bo/line_follower_bo/: handle_obstacle.py  line_follower.py  state_manager.py
src/py_sub/: setup.py
src/timing_tubaf_cpp/: package.xml
src/timing_tubaf_py/: package.xml  setup.py
